[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://salt.png" type="Texture" id=3]
[ext_resource path="res://Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://HUD.gd" type="Script" id=5]
[ext_resource path="res://game_sans_serif_7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://walk.png" type="Texture" id=7]
[ext_resource path="res://Lives.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 1024, 600 )
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -11.0
margin_top = -7.0
margin_right = 1032.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
speed = 550

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="BossTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
scale = Vector2( 1, 0.835 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0, 600 )
rotation = -1.5708

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_left = 497.0
margin_top = 60.0
margin_right = 543.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Best" type="Label" parent="HUD"]
margin_left = 14.0
margin_top = 8.0
margin_right = 203.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Best"

[node name="HighScoreLabel" type="Label" parent="HUD"]
margin_left = 24.0
margin_top = 73.0
margin_right = 190.0
margin_bottom = 141.0
custom_colors/font_color = Color( 0, 1, 0.27451, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1

[node name="LastScoreLabel" type="Label" parent="HUD"]
visible = false
margin_left = 912.89
margin_top = 19.1784
margin_right = 958.89
margin_bottom = 87.1784
custom_colors/font_color = Color( 0, 0.717647, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="StartLabel" type="Label" parent="HUD"]
margin_left = 400.0
margin_top = 264.0
margin_right = 634.0
margin_bottom = 332.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "START"

[node name="Salt" type="TextureProgress" parent="HUD"]
margin_left = 322.0
margin_top = 10.0
margin_right = 704.0
margin_bottom = 44.0
value = 100.0
texture_progress = ExtResource( 3 )

[node name="Lives" type="Node2D" parent="HUD"]
script = ExtResource( 8 )

[node name="One" type="Sprite" parent="HUD/Lives"]
position = Vector2( 982.75, 59.9965 )
scale = Vector2( 0.172331, 0.172331 )
texture = ExtResource( 7 )

[node name="Two" type="Sprite" parent="HUD/Lives"]
position = Vector2( 932, 59 )
scale = Vector2( 0.172331, 0.172331 )
texture = ExtResource( 7 )

[node name="Three" type="Sprite" parent="HUD/Lives"]
position = Vector2( 877, 58 )
scale = Vector2( 0.172331, 0.172331 )
texture = ExtResource( 7 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_Bosstimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
